# python-and-streamllit-projects

./: assignment-4..ipynb  assignment-4.ipynb
01-growth-mindset/: app.py  pyproject.toml
01-growth-mindset/src/01_growth_mindset/: __init__.py
02-unit-converter/: main.py  pyproject.toml
02-unit-converter/src/02_unit_converter/: __init__.py
04-assignments/assignment00-05/00-intro_python/01_add_two_numbers/: index.py
04-assignments/assignment00-05/00-intro_python/02_agreement_bot/: index.py
04-assignments/assignment00-05/00-intro_python/03_fahrenheit_to_celsius/: main.py
04-assignments/assignment00-05/00-intro_python/04_age_riddle/: index.py
04-assignments/assignment00-05/00-intro_python/05_triangle_perimeter/: index.py
04-assignments/assignment00-05/00-intro_python/06_square_number/: index.py
04-assignments/assignment00-05/01_expressions/01_dicesimulator/: index.py
04-assignments/assignment00-05/01_expressions/02_E_mass_energy/: index.py
04-assignments/assignment00-05/01_expressions/03_feet_to_inches/: index.py
04-assignments/assignment00-05/01_expressions/06_rolldice/: index.py
04-assignments/assignment1_to6/: README.md
04_assignments/: README.md
05_secure_data_encruption/: P5JGCCnMrsunbRsTJ-sWdI__L5S5aj38ixTJiFzfHss=  data.json  main.py  pyproject.toml
06_OOP_Practice_Series/: README.md
oop_inventory_managment_syestem/: README.md  inventory.json  main.py  pyproject.toml
password-strength/: main.py  pyproject.toml
password-strength/src/password_strength/: __init__.py
personal-library-manager/: library.json  main.py  pyproject.toml
(+15 files in other folders)
