[project]
name = "password-strength"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FizaSohail1", email = "fizasohail512@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.9.10",
    "streamlit>=1.43.2",
]

[project.scripts]
password-strength = "password_strength:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
